--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,11 @@
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-    <permission android:name="com.app.twiglydb.permission.C2D_MESSAGE"
-        android:protectionLevel="signature" />
     <uses-permission android:name="com.app.twiglydb.permission.C2D_MESSAGE" />
 
 
     <application
+        android:name=".MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -40,22 +39,26 @@
             android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-                <category android:name="com.example.gcm" />
+                <category android:name="com.google.android.samples.com.gcmquickstart" />
             </intent-filter>
         </receiver>
         <service
-            android:name="com.app.twiglydb.gcm.MyGcmListenerService"
+            android:name="gcm.play.android.MyGcmListenerService"
             android:exported="false" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
             </intent-filter>
         </service>
         <service
-            android:name="com.app.twiglydb.gcm.MyInstanceIDListenerService"
+            android:name="gcm.play.android.MyInstanceIDListenerService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.android.gms.iid.InstanceID" />
             </intent-filter>
+        </service>
+        <service
+            android:name="gcm.play.android.RegistrationIntentService"
+            android:exported="false">
         </service>
     </application>
 
