location service reated changes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,10 @@
             android:name="gcm.play.android.RegistrationIntentService"
             android:exported="false">
         </service>
+        <service
+            android:name=".DBLocationService"
+            android:exported="false">
+        </service>
     </application>
 
 </manifest>
