--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale">
         <activity
             android:name=".SplashScreenActivity"
             android:label="@string/app_name"
@@ -61,7 +62,6 @@
         </activity>
         <activity
             android:name="com.eze.api.EzeAPIActivity"
-            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale"
             android:screenOrientation="portrait"/>
 
         <receiver
