--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,11 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
 
+    dexOptions {
+        incremental true
+        javaMaxHeapSize "2048M"
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -33,10 +38,11 @@ android {
 
     defaultConfig {
         applicationId "com.app.twiglydb"
-        minSdkVersion 18
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 5
         versionName "0.0.5"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -49,13 +55,20 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.2.0'
+    apt 'com.jakewharton:butterknife-compiler:8.1.0'
+    compile files('libs/EzetapAndroidSDK-Cordova1.0.7.jar')
+    compile('com.crashlytics.sdk.android:crashlytics:2.5.7@aar') {
+        transitive = true;
+    }
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
+    compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.android.support:design:23.2.1'
     compile 'com.jakewharton.timber:timber:3.1.0'
     compile 'com.android.support:recyclerview-v7:23.2.1'
-    compile 'com.android.support:cardview-v7:23.1.0'
+    compile 'com.android.support:cardview-v7:23.2.1'
     compile 'com.jakewharton:butterknife:8.1.0'
-    apt 'com.jakewharton:butterknife-compiler:8.1.0'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
     compile 'com.squareup:otto:1.3.7'
@@ -66,13 +79,10 @@ dependencies {
     compile 'io.reactivex:rxjava:1.0.10'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'org.glassfish:javax.annotation:10.0-b28'
-    compile 'com.google.android.gms:play-services:8.1.0'
-    compile files('libs/EzetapAndroidSDK-Cordova1.0.7.jar')
-    compile('com.crashlytics.sdk.android:crashlytics:2.5.7@aar') {
-        transitive = true;
-    }
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
-    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
+    compile 'com.google.android.gms:play-services:9.0.2'
     compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.android.support:multidex:1.0.0'
+    compile 'com.google.android.gms:play-services-ads:9.0.2'
+    compile 'com.google.android.gms:play-services-auth:9.0.2'
+    compile 'com.google.android.gms:play-services-gcm:9.0.2'
 }
