--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,9 +66,10 @@
         </activity>
         <activity
             android:name=".OrderDetailActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
             android:screenOrientation="portrait"
-            <intent-filter>
+            android:parentActivityName="com.app.twiglydb.OrderSummaryActivity" >
+        <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
