included daily db summary

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,10 +79,9 @@ dependencies {
     compile 'io.reactivex:rxjava:1.0.10'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'org.glassfish:javax.annotation:10.0-b28'
-    compile 'com.google.android.gms:play-services:9.0.2'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.android.support:multidex:1.0.0'
-    compile 'com.google.android.gms:play-services-ads:9.0.2'
-    compile 'com.google.android.gms:play-services-auth:9.0.2'
     compile 'com.google.android.gms:play-services-gcm:9.0.2'
+    compile 'com.google.android.gms:play-services-location:9.0.2'
+
 }
