--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,6 +79,14 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".WebviewActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".DailyOrderActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
