--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ repositories {
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion '25.0.0'
 
     dexOptions {
         incremental true
